--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body, html {
+  font-family: "Roboto", sans-serif;
+  background-color: #fafafa;
+  font-size: 14px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* height: 100vh; */
+  width: auto;
+  height: auto;
+  min-height: 720px;
+  margin: 24px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  line-height: 18px;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  background-color: #fff;
+  width: 600px;
+  border: 1px solid #e6e6e6;
+  height: auto;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card .commentInput {
+  display: flex;
+  align-items: center;
+}
+.card .commentInput img {
+  width: 32px;
+  padding: 9px 8px;
+}
+.card .commentInput textarea {
+  resize: none;
+  border: none;
+  margin: 16px;
+  width: calc(100% - 88px);
+  height: 18px;
+}
+.card .commentInput textarea:focus {
+  outline: none !important;
+}
+.card .postImage {
+  width: 100%;
+}
+.card .username {
+  padding: 16px;
+  font-weight: 700;
+  color: #262626;
+  display: flex;
+  align-items: center;
+}
+.card .username p {
+  padding-left: 12px;
+}
+.card .username img {
+  width: 30px;
+  height: 30px;
+  border-radius: 30px;
+}
+.card .status {
+  border-bottom: 1px solid #f2f2f2;
+  padding: 16px;
+}
+.card .status b {
+  color: #262626;
+}
+.card .status .like img {
+  padding: 8px;
+  width: 24px;
+}
+i.Nav {
+  background-color: #fff;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.0975);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+  -webkit-transition: height 0.2s ease-in-out;
+  transition: height 0.2s ease-in-out;
+  height: 77px;
+}
+.Nav-menus {
+  display: flex;
+  flex-direction: row;
+  height: 77px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 2px 40px;
+}
+.Nav-brand-logo {
+  display: block;
+  background-position: -176px 0px;
+  background-image: url(../src/sprite.png);
+  background-size: 405px 379px;
+  background-repeat: no-repeat;
+  height: 35px;
+  width: 176px;
+  text-indent: -1000%
 }
